tests/parser/bad/lib/lmodule-library-cid-type-cid-eq-bar-cid-of-with.scillib
library TestLib

(* Should have a capital letter *)
type House =
| Kind of string
